@@ -3080,6 +3080,13 @@ void EmitCImp::emitIntTop(AstNodeModule*) {
 
 void EmitCImp::emitInt(AstNodeModule* modp) {
     puts("\n//==========\n\n");
+
+    if (AstClass* classp = VN_CAST(modp, Class)) {
+        if (classp->extendsp())
+            puts("#include \"" + prefixNameProtect(classp->extendsp()->classp()->classOrPackagep())
+                 + ".h\"\n");
+    }
+
     emitModCUse(modp, VUseType::INT_INCLUDE);
 
     // Declare foreign instances up front to make C++ happy
